@@ -6,4 +6,4 @@ copyright_holder= Cold Hard Code, LLC
 [@GPHAT]
 
 [Prereqs]
-Data::SearchEngine = 0.26
+Data::SearchEngine = 0.28
